--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             <h3>Contact Us</h3>
 
             <ul>
-              <li>sadaddinovismoil7@gmail.com</li>
+              <li>contact@gmail.com</li>
             </ul>
 
             <div class="social">
